# simple_agent

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: running-tests.md
plain_agent/: agent_loop.py  cli.py  compaction.py  config.py  conversation_history.py  environment.py  message_types.py  prompt.py  streaming.py  terminal_loop.py
plain_agent/sandbox/: base.py  bubblewrap.py
plain_agent/sandbox/bubblewrap/: __init__.py  command.py  discovery.py  workspace.py
plain_agent/tools/: base_tool.py  command_runtime.py  registry.py  run_command.py
plain_agent/tools/permissions/: controller.py  network_permission.py  request.py
plain_agent/tools/web/: __init__.py  fetch.py  search.py
plain_agent/tools/web_search/: __init__.py  exa_mcp.py  tool.py
plain_agent/ui/: app.py  rendering.py  terminal_renderer.py
plain_agent/ui/textual_terminal/: __init__.py  app.py  approval.py  rendering.py  terminal.tcss  transcript.py
simple_agent/: agent.py  cli.py  conversation_history.py  llm_client.py  message_types.py  prompt.py  streaming.py
simple_agent/tools/: base_tool.py  command_policy.py  command_runtime.py  definitions.py  edit_file.py  list_files.py  read_file.py  run_command.py  search_text.py  tools.py  utils.py  write_file.py
tests/: test_agent.py  test_compaction.py  test_config.py  test_conversation_history.py  test_linux_sandbox.py  test_llm_client.py  test_network_permission.py  test_permission_controller.py  test_sandbox.py  test_terminal_loop.py  test_textual_terminal.py  test_tools.py  test_ui.py  test_web_search.py
(+3 files in other folders)
