[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "plain-agent"
version = "0.1.7"
description = "A small agent that calls OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "httpx>=0.28.1,<1",
    "openai==2.43.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textual>=6.0.0",
]

[project.scripts]
plain-agent = "plain_agent.cli:main"

[tool.setuptools.packages.find]
include = ["plain_agent*"]

[tool.setuptools.package-data]
"plain_agent.ui" = ["*.tcss"]
